# node-webrtc

./: CMakeLists.txt  package.json
.circleci/: config.yml
examples/: bridge.js  peer.js
lib/: peerconnection.js
scripts/: build-webrtc.sh  configure-webrtc.sh  download-webrtc.sh  karma.js
src/: peerconnection.cc
test/: closing-data-channel.js  closing-peer-connection.js  connect.js  create-offer.js  iceservers.js  multiconnect.js  rtcrtpreceiver.js  sessiondesc.js
test/helpers/: capture-candidates.js  gc.js  index.js
